[gd_scene load_steps=4 format=3 uid="uid://b57txqita4to6"]

[ext_resource type="Script" path="res://scripts/items/speed_potion.gd" id="1_6x0hk"]
[ext_resource type="Texture2D" uid="uid://cbmrnwx2550qq" path="res://assets/sprites/world_tileset.png" id="2_aeb2f"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_03omo"]
radius = 4.0
height = 16.0

[node name="Speed_Potion" type="Area2D"]
collision_mask = 2
script = ExtResource("1_6x0hk")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_aeb2f")
region_enabled = true
region_rect = Rect2(20, 130, 8, 14)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_03omo")

[node name="Timer" type="Timer" parent="."]

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="speed_potion_ended" from="." to="." method="_on_speed_potion_ended"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
